# fireplan_alarm_divera

./: Cargo.toml  LICENSE  README.md  fireplan_alarm_divera.conf.template  fireplan_alarm_divera.service  install.sh
src/: fireplan.rs  main.rs  parser.rs  web_server.rs
